100 day devops/Day 95 Create Security Group Using Terraform.tf
resource "aws_security_group" "xfusion-sg" {
  name        = "xfusion-sg"
  description = "Security group for xfusion application"
  vpc_id      = aws_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "security_group_id" {
  value = aws_security_group.xfusion-sg.id
}
